• 1.40f, 18 April 2008       □ Increased the maximum frame rate accepted by Image>Stacks>Animation         Options to 1000.       □ When animating stacks, the frame rate is displayed in the ImageJ status         bar.       □ Drag and Drop exceptions are now displayed in an ImageJ window.       □ Fixed a bug that caused some Bruker "fid" files to fail to open.
git-svn-id: http://code.imagej.net/svn/imagej/branches/ijx@284 be23795f-a60e-40d4-ba19-055798872e57

--- a/release-notes.html
+++ b/release-notes.html
@@ -5,24 +5,10 @@
 </head>
 <body>
 
-<li> <u>1.40e, 15 April 2008</u>
+<li> <u>1.41a, 18 April 2008</u>
 <ul>
-<li> While creating a straight line selection, hold down the alt key to force the two points that
-define it to have integer coordinate values.
-<li> Results table labels now include the file name extension.
-<li> Set the JPEG Quality in <i>Edit&gt;Options&gt;Input/Output</i> to 100% 
-to disable color sub-sampling, reducing the likelihood of artifacts.
-<li> The DPI of images saved in JPEG format is set to the scale defined in
-<i>Analyze&gt;Set Scale</i> if the unit of length is "inch".
-<li> Added the setOption("Display Labels", boolean) and setOption("Limit to Threshold", boolean)
-macro functions.
-<li> Added the Analyzer.setMeasurement(int, boolean) method.
-<li> Worked around a OSX Leopard/Java 1.5 bug that caused dialogs boxes to return default
-text and numeric field values when the return key was pressed.
-<li>  Fixed a bug that caused the LSM Reader to not correctly open 16-bit files using 
-LZW compression with differencing.
-<li> Fixed a bug that caused saving in BMP format to fail with
-16-bit and 32-bit images.
+<li> Draw and Drop exceptions are now displayed in a window.
+<li> Fixed a bug that caused some Bruker "fid" files to fail to open.
 </ul>
 
 </body>
