• 1.40g, 18 April 2008       □ The Java version is displayed in the status bar on startup.       □ Fixed a bug that caused images saved in TIFF format to have their         contents shifted left if the "Info" property was set to an empty         string.       □ Fixed a bug, introduced in v1.40c, that caused stacks saved in TIFF         format to have their contents shifted left if any slice had a blank         label and all other slice labels where null.
git-svn-id: http://code.imagej.net/svn/imagej/branches/ijx@289 be23795f-a60e-40d4-ba19-055798872e57

--- a/release-notes.html
+++ b/release-notes.html
@@ -5,10 +5,14 @@
 </head>
 <body>
 
-<li> <u>1.41a, 18 April 2008</u>
+<li> <u>1.40g, 21 April 2008</u>
 <ul>
-<li> Draw and Drop exceptions are now displayed in a window.
-<li> Fixed a bug that caused some Bruker "fid" files to fail to open.
+<li> The Java version is displayed in the status bar on startup.
+<li> Fixed a bug that caused images saved in TIFF format to have their
+contents shifted left if the "Info" property was set to an empty string.
+<li> Fixed a bug, introduced in v1.40c,  that caused stacks saved in TIFF format to have their
+contents shifted left if any slice had a blank label and all
+other slice labels where null.
 </ul>
 
 </body>
