--- a/release-notes.html
+++ b/release-notes.html
@@ -5,42 +5,34 @@
 </head>
 <body>
 
-<li> <u>1.41b, 6 May 2008</u>
+<li> <u>1.41c, 16 May 2008</u>
 <ul>
-<li>  Incorporated Michael Schmid's 
-<a href="http://rsb.info.nih.gov/ij/plugins/avi-reader.html">AVI Reader</a>
-plugin. AVI files can now be opened using <i>File&gt;Open</i>,
-<i>File&gt;Import&gt;AVI</i> and drag and drop.
-<li> To reduce the size of the Plugins menu, JAR files that implement fewer than four
-Plugins submenu commands are installed in the submenu that corresponds the
-the folder containing the JAR file.
-In addition, single plugins distributed as ZIP archives are installed in 
-the "Miscellaneous" submenu.
-<li> Johannes Hermen and Christian Mol added the ability
-to parse float header values to the DICOM reader and contributed a 2652 tag dictionary
-(<a href="http://rsb.info.nih.gov/ij/download/docs/DICOM_Dictionary.txt">DICOM_Dictionary.txt</a>)
-that the DICOM reader will use if it is copied to the ImageJ folder.
-<li> The DICOM reader uses the value of the "Slice Thickness" tag for 
-voxel depth if the "Slice Spacing" tag is missing.
-<li> The particle analyzer, when run from a batch mode macro, no longer
-opens the ROI Manager window when "Add to Manager" is enabled,
-resulting in faster and more reliable operation.
-<li> <i>Process&gt;Enhance Contrast</i> works with composite
-color images.
-<li> The minimum plot size that can be set in
-<i>Edit&gt;Options&gt;Profile Plot Options</i> was reduced from 300x100 to 100x50.
-<li> Added the "Restore ROIs Centered" option to the ROI Manager's 
-More>>Options command.
-<li> Added the Stack.setActiveChannels() macro function.
-<li> Fixed a bug that could cause an exception when saving composite
-color images.
-<li> Fixed a bug that caused composite color images with custom LUTs 
-to revert to the default LUTs after resaving.
-<li> Fixed a bug that caused Z projection of hyperstacks to fail in batch
-mode macros.
-<li> Fixed a bug that caused ImageJ to not correctly read ImageJ TIFF stacks modified by LibTIFF.
-<li> Fixed a bug that caused macros using <i>Analyze&gt;Surface Plot</i> plot with both the
-"Draw Wireframe" and "Draw Axis" options to fail.
+<li> Added the <i>Edit&gt;Options&gt;Proxy Settings</i> command,
+based on the NetSetup plugin contributed by Dimiter Prodanov.
+<li> With merged composite color images, the "Preview" check box is not
+ added to dialog boxes and the "Process all n images?" dialog is not
+ displayed.
+<li> Added 13 tags to the built in DICOM dictionary.
+<li> ImageJ calls system.gc() on Windows when stacks and/or the last
+image is closed.
+<li> Added the Dialog.addCheckboxGroup() macro function.
+<li> Added the GenericDialog.setEchoChar() method, used to implement
+the password field in the <i>Plugins&gt;Utilities&gt;Proxy Settings</i>
+"Authentication" dialog.
+<li> Fixed a bug that sometimes caused the <i>Image&gt;Adjust&gt;Brightness/Contrast</i> "Auto" option
+to fail on images with non-rectangular selections.
+<li> Fixed a bug, introduced in v1.40b, that caused the labels in images
+created by the particle analyzer Show:Outlines option to be
+black instead or red.
+<li> Fixed a bug that caused 8-bit PNGs to open in RGB format.
+<li> Fixed a bug that caused ImageJ to not correctly read ImageJ 
+ TIFF stacks modified by LibTIFF.
+ <li> Fixed a bug that sometimes caused 90 degree rotated large 
+ composite color images to not be be correctly displayed.
+<li> Fixed a bug that caused an "out of memory" error when opening
+DICOM files with a UT (Unlimited Text) tag.
+<li> Fixed a bug that caused the "Show All" feature of the ROI Manager
+to not work as expected with more than 10,000 slice-associated ROIs.
 </ul>
 
 </body>
