• 1.41d, 28 May 2008       □ Mark Longair contributed the Plugins>Utilities>Find Commands         command, which provides a dialog for interactively finding         ImageJ commands by typing a substring of the command name. Type         "l" (launch), a few letters for disambiguation and then 'enter'         to run the matching command.       □ Gabriel Landini contributed an improved version of Process>         Binary>File Holes that is up to 100 times faster.       □ The Image>Stacks>Make Montage command now works with composite         color images.       □ Enable "Save TIFF and Raw in Intel Byte Order" in Edit>Options>         Input/Output and File>Save As>Tiff will save in little-endian         format.       □ File>Save As>PNG saves 8, 16 and 32 bit images as 8-bit PNGs,         and now works with composite color images.       □ Changed the "GIF Transparent Index (0-255)" field in Edit>         Options>Input/Output to "GIF and PNG Transparent Index".       □ The "<" and ">" keys and the mouse wheel now change hyperstack         channels.       □ Added a "Copy Row Numbers" option to the Edit>Options>Input/         Output dialog box.       □ Changed the Results window File>Set File Extension menu item to         File>Options.       □ Right-clicking on a macro tool runs a macro with the name <tool         name>+" Options".       □ DICOM IMPLICIT_VR tags with a length less than 4 are now         displayed in the Image>Show Info window.       □ Added the Neuron (1.6M, 5 channels) sample image, which was         contributed by John Alexander. Press "i" (Image>Show Info) to         get a description.       □ Added the getStringWidth(string) macro function.       □ Added getBufferedImage() methods to the ImagePlus and         ImageProcessor classes.       □ Added a get16BitBufferedImage() method to the ShortProcessor         class.       □ Fixed a bug that caused Image>Crop to fail with merged         composite images when using Java 1.6.       □ Fixed bugs in the Plot c

--- a/release-notes.html
+++ b/release-notes.html
@@ -5,34 +5,50 @@
 </head>
 <body>
 
-<li> <u>1.41c, 16 May 2008</u>
+<li> <u>1.41d, 28 May 2008</u>
 <ul>
-<li> Added the <i>Edit&gt;Options&gt;Proxy Settings</i> command,
-based on the NetSetup plugin contributed by Dimiter Prodanov.
-<li> With merged composite color images, the "Preview" check box is not
- added to dialog boxes and the "Process all n images?" dialog is not
- displayed.
-<li> Added 13 tags to the built in DICOM dictionary.
-<li> ImageJ calls system.gc() on Windows when stacks and/or the last
-image is closed.
-<li> Added the Dialog.addCheckboxGroup() macro function.
-<li> Added the GenericDialog.setEchoChar() method, used to implement
-the password field in the <i>Plugins&gt;Utilities&gt;Proxy Settings</i>
-"Authentication" dialog.
-<li> Fixed a bug that sometimes caused the <i>Image&gt;Adjust&gt;Brightness/Contrast</i> "Auto" option
-to fail on images with non-rectangular selections.
-<li> Fixed a bug, introduced in v1.40b, that caused the labels in images
-created by the particle analyzer Show:Outlines option to be
-black instead or red.
-<li> Fixed a bug that caused 8-bit PNGs to open in RGB format.
-<li> Fixed a bug that caused ImageJ to not correctly read ImageJ 
- TIFF stacks modified by LibTIFF.
- <li> Fixed a bug that sometimes caused 90 degree rotated large 
- composite color images to not be be correctly displayed.
-<li> Fixed a bug that caused an "out of memory" error when opening
-DICOM files with a UT (Unlimited Text) tag.
-<li> Fixed a bug that caused the "Show All" feature of the ROI Manager
-to not work as expected with more than 10,000 slice-associated ROIs.
+<li> Mark Longair contributed the <i>Plugins&gt;Utilities&gt;Find Commands</i>
+command, which provides a dialog for interactively finding ImageJ commands by
+typing a substring of the command name. One can simply type "l" (launch), a few
+letters for disambiguation and then 'enter' to run the matching command.
+<li> Gabriel Landini contributed an improved version of 
+<i>Process&gt;Binary&gt;File Holes</i> that is up to 100 times faster.
+<li> The <i>Image&gt;Stacks&gt;Make Montage</i> command now
+works with composite color images.
+<li> Enable the "Save TIFF and Raw in Intel Byte Order" option in
+<i>Edit&gt;Options&gt;Input/Output</i> to save images
+as little-endian TIFF files.
+<li> <i>File&gt;Save As&gt;PNG</i> saves 8, 16 and 32 bit images as 8-bit PNGs, and it
+now works with composite color images.
+<li> Changed the "GIF Transparent Index (0-255)" field in <i>Edit&gt;Options&gt;Input/Output</i> 
+to "GIF and PNG Transparent Index".
+<li> The "<" and ">" keys and the mouse wheel now change hyperstack channels.
+<li> Added the "Copy Row Numbers" option to the 
+<i>Edit&gt;Options&gt;Input/Output</i> dialog box.
+<li> Changed the Results window
+<i>File&gt;Set File Extension</i> menu item to <i>File&gt;Options</i>.
+<li> Right-clicking on a macro tool runs a macro with the name &lt;tool name&gt;+" Options".
+<li> DICOM IMPLICIT_VR tags with a length less than 4 are now displayed in the <i>Image&gt;Show Info</i>
+window.
+<li> Added the <i>Neuron (1.6M, 5 channels)</i> sample image,
+which was contributed by John Alexander. Open the image and
+press "i" (<i>Image&gt;Show Info</i>) to get a description.
+<li> Added the getStringWidth(string) macro function.
+<li> Added getBufferedImage() methods to the ImagePlus and ImageProcessor classes.
+<li> Added a get16BitBufferedImage() method to the ShortProcessor class.
+<li> Fixed a bug that caused <i>Image&gt;Crop </i> to fail with merged
+composite images when using Java 1.6.
+<li> Fixed a bugs in the Plot class (Plot.* macro functions) that caused
+incorrect axis labeling if setLimits() was not called first and caused lines
+and shapes wider than three pixels to sometimes be drawn outside the
+plot frame.
+<li> Fixed a bug in the imageCalculator() macro function that sometimes caused
+the result image to not be the currently selected image.
+<li> Fixed a bug in the setColor() macro function that caused it to always
+convert the argument to an integer.
+<li> Fixed a bug in the <i>Image&gt;Adjust&gt;Threshold</i> tool that
+caused the "Auto" feature to not work correctly on images with line
+selections.
 </ul>
 
 </body>
