--- a/release-notes.html
+++ b/release-notes.html
@@ -5,22 +5,19 @@
 </head>
 <body>
 
-<li> <u>1.41f, 24 June 2008</u>
+<li> <u>1.41g, 1 July 2008</u>
 <ul>
-<li> The <i>File&gt;Import&gt;URL</i> command now opens
-Java (.java) and javaScript (.js) programs.
-<li> Added the IJ.run(ImagePlus, command, options), 
-IJ.save(ImagePlus, path) and IJ.saveAs(ImagePlus, format, path) methods.
-<li> Renamed the <i>Image&gt;Color&gt;RGB Split</i> and <i>RGB Merge</i>
-to <i>Split Channels</i> and <i>Merge Channels</i>.
-<li> Added a redundent <i>Image&gt;Color&gt;Channels Tool</i> command.
-<li> Added a "JavaScript" type to the <i>Plugins&gt;New</i> dialog.
-<li> Added the List.set(key,value), List.get(key), List.size, List.clear,
-List.setList(string) and List.getList macro functions.
-<li> Fixed bug that could cause <i>Image&gt;Color&gt;RGB Merge</i>
-to throw an exception of one of the input images was a hyperstack.
-<li> Fixed a bug that caused an extra tab at the end of Results window lines copied 
-to the clipboard are saved as a text file.
+<li> Dialogs can now be canceled by clicking on the close box.
+<li>  Added <i>Merge Channels</i>, <i>Edit LUT</i>, <i>Red</i>, <i>Green</i>, <i>Blue</i>, <i>Cyan</i>, <i>Magenta</i>,
+ <i>Yellow</i> and <i>Grays</i> command to the <i>More&#xbb; </i>menu in the "Channels" tool.
+ <li> Split the <i>Plugins&gt;New</i> command into a submenu with <i>Macro</i>, <i>JavaScript</i>, <i>Plugin</i>, <i>Plugin Filter</i>,
+ <i>Plugin Frame</i>, <i>Text Window</i> and <i>Table</i> commands.
+<li> Thanks to a patch by Ulf Dittmer, the <i>File&gt;Open Recent</i> menu 
+no longer lists files multiple times.
+<li> The "The calibration of this image conflicts with the current global calibration."
+warning message is not displayed for images opened in macros.
+<li> The waitForUser() macro function remembers the dialog box location.
+<li> The PlugInClassLoader loads classes from JAR files faster.
 </ul>
 
 </body>
