--- a/release-notes.html
+++ b/release-notes.html
@@ -5,10 +5,14 @@
 </head>
 <body>
 
-<li> <u>1.41i, 21 July 2008</u>
+<li> <u>1.41i, 25 July 2008</u>
 <ul>
 <li> Added the <i>Edit&gt;Selection&gt;Straighten</i> command.
-<li> An extension is added to file names without one in <i>File&gt;Save As</i> dialogs
+<li> An extension is added to file names without one in <i>File&gt;Save As</i> dialogs.
+<li> Added the substring(string,index), setOption("UnitIsPixel",boolean) and
+is("UnitIsPixel") macro functions.
+<li> Fixed a bug that caused <i>Analyze&gt;Summarize</i> to not work
+with "IntDen" results.
 </ul>
 
 </body>
